tooltip: fix for lines that are too long and don't have breaking whitespace

--- a/client/Framework/themes/default/kd.tooltip.styl
+++ b/client/Framework/themes/default/kd.tooltip.styl
@@ -129,6 +129,7 @@ div.kdtooltip
       hyphens                 auto
       direction               ltr
       text-rendering          optimizeLegibility
+      word-wrap               break-word
 
       font-size               12px
       font-weight             300
